--- a/tests.html
+++ b/tests.html
@@ -4,27 +4,31 @@ title: Tests
 permalink: /tests/
 ---
 
-  <script src="/.grunt/grunt-contrib-jasmine/es5-shim.js"></script>
-  
-  <script src="/.grunt/grunt-contrib-jasmine/jasmine.js"></script>
-  
-  <script src="/.grunt/grunt-contrib-jasmine/jasmine-html.js"></script>
-  
-  <script src="/.grunt/grunt-contrib-jasmine/json2.js"></script>
-  
-  <script src="/.grunt/grunt-contrib-jasmine/boot.js"></script>
-  
-  <script src="/lib/jquery-2.1.3.js"></script>
-  
-  <script src="/lib/jquery-ui-1.11.2-core.js"></script>
-  
-  <script src="/src/CssPropertyInfo.js"></script>
-  
-  <script src="/src/jquery.ui.styleTweaker.js"></script>
-  
-  <script src="/spec/CssPropertyInfoSpec.js"></script>
-  
-  <script src="/spec/styleTweakerSpec.js"></script>
-  
-  <script src="/.grunt/grunt-contrib-jasmine/reporter.js"></script>
-  
+<script src="{{ '/.grunt/grunt-contrib-jasmine/es5-shim.js' | prepend: site.baseurl }}"></script>
+
+<script src="{{ '/.grunt/grunt-contrib-jasmine/jasmine.js' | prepend: site.baseurl }}"></script>
+
+<script src="{{ '/.grunt/grunt-contrib-jasmine/jasmine-html.js' | prepend: site.baseurl }}"></script>
+
+<script src="{{ '/.grunt/grunt-contrib-jasmine/json2.js' | prepend: site.baseurl }}"></script>
+
+<script src="{{ '/.grunt/grunt-contrib-jasmine/boot.js' | prepend: site.baseurl }}"></script>
+
+<!-- Added in header 
+
+<script src="/lib/jquery-2.1.3.js"></script>
+
+<script src="/lib/jquery-ui-1.11.2-core.js"></script>
+
+<script src="/src/CssPropertyInfo.js"></script>
+
+<script src="/src/jquery.ui.styleTweaker.js"></script>
+
+-->
+
+<script src="{{ '/spec/CssPropertyInfoSpec.js' | prepend: site.baseurl }}"></script>
+
+<script src="{{ '/spec/styleTweakerSpec.js' | prepend: site.baseurl }}"></script>
+
+<script src="{{ '/.grunt/grunt-contrib-jasmine/reporter.js' | prepend: site.baseurl }}"></script>
+
